--- a/IntegrationLibraryExample/app/src/main/res/values/strings.xml
+++ b/IntegrationLibraryExample/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">IntegrationLibraryExample</string>
     <string name="action_settings">Settings</string>
     <string name="print">Print</string>
+    <string name="logout">Change user</string>
 </resources>
